# lcf

./: Cargo.toml  pyproject.toml
src/: indexed_iterators.rs  iterators.rs  lib.rs
tests/: conftest.py  test_indexed.py  test_integration.py  test_iterators.py
tests/data/: three_cds.fna  three_cds.fna.fai
