[package]
name = "lcf"
version = "0.3.0"
edition = "2021"
authors =[ "Jorge Carrasco Muriel"]

[dependencies]
bio = { version = "0.40.0", path="rust-bio"}
rand = { version = "0.8.5", features = ["small_rng"] }

[lib]
name = "lcf"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.16.4"
features = ["extension-module"]

